--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             {
                 type: "phishing",
                 content: `
-                    <h2>Fake Social Media Login</h2>
+                    <h2>Phishing Scam: Fake Social Media Login</h2>
                     <p>We noticed suspicious activity in your account. Please verify your credentials below.</p>
                     <form onsubmit="loseGame('phishing'); return false;">
                         <input type="text" placeholder="Username" required>
@@ -275,8 +275,9 @@
             document.getElementById('submitReport').style.display = 'none';
             document.getElementById('explanation').style.display = 'none';
 
-            if (currentScenario.type === "none" && currentScenario.content.includes("Login")) {
-                document.getElementById('timer').style.display = 'none'; // No timer on login pages
+            // No timer for login pages
+            if (currentScenario.content.includes("form") && !currentScenario.content.includes("fake")) {
+                document.getElementById('timer').style.display = 'none';
             } else {
                 document.getElementById('timer').style.display = 'block';
                 startTimer();
