--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
             {
                 type: "phishing",
                 content: `
-                    <h2>Verify Your Email Account</h2>
-                    <p>Your account will be disabled if you don't verify within 24 hours.</p>
-                    <a href="#" onclick="loseGame('phishing');" style="color: red;">Click here to verify</a>
+                    <h2>Account Security Alert</h2>
+                    <p>We detected an unusual login attempt from an unfamiliar device. To secure your account, please verify your identity.</p>
+                    <a href="#" onclick="loseGame('phishing');" style="color: red;">Verify Now</a>
                 `,
                 difficulty: 1
             },
@@ -183,9 +183,9 @@
             {
                 type: "phishing",
                 content: `
-                    <h2>PayPal: Unusual Login Attempt</h2>
-                    <p>We detected an unusual login attempt. Please confirm your identity to secure your account.</p>
-                    <a href="#" onclick="loseGame('phishing');" style="color: red;">Log In to Confirm</a>
+                    <h2>Account Verification Needed</h2>
+                    <p>We detected an unauthorized login attempt. Please confirm your account details to secure it.</p>
+                    <a href="#" onclick="loseGame('phishing');" style="color: red;">Secure My Account</a>
                 `,
                 difficulty: 3
             },
@@ -233,8 +233,8 @@
             {
                 type: "phishing",
                 content: `
-                    <h2>Phishing Scam: Fake Gmail Login</h2>
-                    <p>Your Gmail account has been locked for security reasons. Please login below to regain access.</p>
+                    <h2>Security Alert: Unauthorized Login Attempt</h2>
+                    <p>Your account has been accessed from an unknown location. Please log in again to secure your account.</p>
                     <form onsubmit="loseGame('phishing'); return false;">
                         <input type="text" placeholder="Email Address" required>
                         <input type="password" placeholder="Password" required>
@@ -246,12 +246,12 @@
             {
                 type: "phishing",
                 content: `
-                    <h2>Phishing Scam: Fake Social Media Login</h2>
-                    <p>We noticed suspicious activity in your account. Please verify your credentials below.</p>
+                    <h2>Account Suspended - Action Required</h2>
+                    <p>We detected unusual activity on your account. Please log in to prevent your account from being suspended.</p>
                     <form onsubmit="loseGame('phishing'); return false;">
                         <input type="text" placeholder="Username" required>
                         <input type="password" placeholder="Password" required>
-                        <button type="submit">Verify</button>
+                        <button type="submit">Log In</button>
                     </form>
                 `,
                 difficulty: 5
